objects/DM_Loan_Account__c.object
<CustomObject>
    <fields>
        <fullName>DM_LA_Amortized_Balance_Type__c</fullName>
        <label>DM Amortize Balance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Interest</fullName>
                    <default>true</default>
                    <label>DM_Interest</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Last_Accrual_Date__c</fullName>
        <description>Last accrual Date on loan account</description>
        <inlineHelpText>The date on which Interest was computed and posted on the Account.</inlineHelpText>
        <label>DM Last Accrual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Last_Advance_Date__c</fullName>
        <description>Date when last Advance was made.</description>
        <inlineHelpText>Date when the  Advance was made.</inlineHelpText>
        <label>DM Last Advance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Last_Bank_Transaction_Date__c</fullName>
        <label>DM Last Bank Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Last_Billed_Amount__c</fullName>
        <label>DM Last Billed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Last_Disbursal_Amount__c</fullName>
        <inlineHelpText>Last Disbursal Transaction Amount</inlineHelpText>
        <label>DM Last Disbursal Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Last_Disbursal_Date__c</fullName>
        <description>Last Disbursal Transaction Date</description>
        <inlineHelpText>Last Disbursal Transaction Date</inlineHelpText>
        <label>DM Last Disbursal Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Last_Installment_Date__c</fullName>
        <description>Maturity Date of Loan account</description>
        <inlineHelpText>Maturity date as per contract.</inlineHelpText>
        <label>DM Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Last_Interest_Posting_Date__c</fullName>
        <label>DM Last Interest Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Last_Investment_Loan_Payment_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to indicate whether the last payment of investment loan is changed anytime in the lifetime of the loan by user.</description>
        <label>DM Last Investment Loan Payment Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Last_Payment_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Last Payment Received on this Account.</inlineHelpText>
        <label>DM Last Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Last_Payment_Date__c</fullName>
        <description>Date when last payment was received.</description>
        <inlineHelpText>Date when the  last payment was received.</inlineHelpText>
        <label>DM Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Last_Transaction_Id__c</fullName>
        <label>DM Last Transaction Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Last_Transaction_Timestamp__c</fullName>
        <inlineHelpText>This shows the date and time stamp of last transaction happened on this contract.
This will be populated by system and must not be changed by user.</inlineHelpText>
        <label>DM Last Transaction Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DM_Last_Transaction_Type__c</fullName>
        <inlineHelpText>This shows the last transaction happened on this contract.
This will be populated by system and must not be changed by user.</inlineHelpText>
        <label>DM Last Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Reschedule</fullName>
                </value>
                <value>
                    <fullName>DM_Extension</fullName>
                </value>
                <value>
                    <fullName>DM_PrincipalAdjustment-Add</fullName>
                </value>
                <value>
                    <fullName>DM_Refund</fullName>
                </value>
                <value>
                    <fullName>DM_Additional Repayment</fullName>
                </value>
                <value>
                    <fullName>DM_Stop Accrual</fullName>
                </value>
                <value>
                    <fullName>DM_Start Accrual</fullName>
                </value>
                <value>
                    <fullName>DM_Payment Transaction</fullName>
                </value>
                <value>
                    <fullName>DM_Disbursal Transaction</fullName>
                </value>
                <value>
                    <fullName>DM_Payment Reversal</fullName>
                </value>
                <value>
                    <fullName>DM_Disbursal Reversal</fullName>
                </value>
                <value>
                    <fullName>DM_Credit Limit Change</fullName>
                </value>
                <value>
                    <fullName>DM_Index Rate Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_LoanCnt__c</fullName>
        <defaultValue>1</defaultValue>
        <label>DM LoanCnt</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Loan_Account_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>DM Loan Account External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Loan_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Loan Amount</description>
        <inlineHelpText>This is the financed amount on the contract which will be disbursed to the customer.</inlineHelpText>
        <label>DM Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Loan_Balance__c</fullName>
        <label>DM Loan Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Loan_Cycle_Count__c</fullName>
        <label>DM Loan Cycle Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Loan_Effective_Date__c</fullName>
        <description>Effective Date of Loan account.</description>
        <label>DM Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Loan_Status__c</fullName>
        <inlineHelpText>Status of the Account expected values are :
Pending Approval
Active - Good Standing
Active - Bad Standing
Active - Matured
Approved
Canceled
Closed - Obligations met
Closed- Written Off
Closed - Refinanced
Partial Application
Closed - Premature</inlineHelpText>
        <label>DM Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Active - Bad Standing</fullName>
                </value>
                <value>
                    <fullName>DM_Active - Good Standing</fullName>
                </value>
                <value>
                    <fullName>DM_Active - Marked for Closure</fullName>
                </value>
                <value>
                    <fullName>DM_Active - Matured</fullName>
                </value>
                <value>
                    <fullName>DM_Approved</fullName>
                </value>
                <value>
                    <fullName>DM_Canceled</fullName>
                </value>
                <value>
                    <fullName>DM_Closed - Obligations met</fullName>
                </value>
                <value>
                    <fullName>DM_Closed - Premature</fullName>
                </value>
                <value>
                    <fullName>DM_Closed - Refinanced</fullName>
                </value>
                <value>
                    <fullName>DM_Closed- Written Off</fullName>
                </value>
                <value>
                    <fullName>DM_Invalid</fullName>
                </value>
                <value>
                    <fullName>DM_Partial Application</fullName>
                    <default>true</default>
                    <label>DM_Partial Application</label>
                </value>
                <value>
                    <fullName>DM_Pending Approval</fullName>
                </value>
                <value>
                    <fullName>DM_Premature Closure Initiated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Long_Term_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Long Term Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_MCA_Fraction_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DM MCA Fraction Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_MCA_Mode__c</fullName>
        <label>DM MCA Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Revenue Transaction</fullName>
                </value>
                <value>
                    <fullName>DM_Credit Card Processor</fullName>
                </value>
                <value>
                    <fullName>DM_Payment Gateway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_MCA_Transaction_Category__c</fullName>
        <label>DM MCA Transaction Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Margin_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Margin Rate for Floating Interest Rate Loan</inlineHelpText>
        <label>DM Margin Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Market_Place_Value__c</fullName>
        <formula>DM_Loan_Amount__c -  DM_Protect_fee_amount__c + DM_Protect_Split_Charged_To_Investor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DM Market Place Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Master_Archive_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this is a master object record containing one or more child object records. Master object records may be archived but are not deleted by the system. This is automatically updated by the system. Do not update it manually.</inlineHelpText>
        <label>DM Master Archive Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Maturity_Date_Current__c</fullName>
        <inlineHelpText>This is the date on which the the loan matures</inlineHelpText>
        <label>DM Current Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Maximum_Advance_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>DM Maximum Advance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Maximum_Draw_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Maximum Draw amount which can be given to the customer, applicable for line of credits.</inlineHelpText>
        <label>DM Maximum Draw Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Maximum_Interest_Rate__c</fullName>
        <description>Maximum interest rate for the contract</description>
        <inlineHelpText>Maximum interest rate for the contract</inlineHelpText>
        <label>DM Maximum Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Metro2_Account_Status_Code__c</fullName>
        <inlineHelpText>Contains the status code that properly identifies the current condition of the account as of the Date of Account Information</inlineHelpText>
        <label>DM Account Status Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Metro2_Account_Type_Code__c</fullName>
        <inlineHelpText>Report the specific code that identifies the account classification.</inlineHelpText>
        <label>DM Account Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_7B - Agricultural</fullName>
                </value>
                <value>
                    <fullName>DM_00 - Auto</fullName>
                </value>
                <value>
                    <fullName>DM_3A - Auto Lease</fullName>
                </value>
                <value>
                    <fullName>DM_10 - Business Loan</fullName>
                </value>
                <value>
                    <fullName>DM_6A - Commercial Installment Loan</fullName>
                </value>
                <value>
                    <fullName>DM_0F - Construction Loan</fullName>
                </value>
                <value>
                    <fullName>DM_12 - Education</fullName>
                </value>
                <value>
                    <fullName>DM_15 - Line of Credit</fullName>
                </value>
                <value>
                    <fullName>DM_20 - Note Loan</fullName>
                </value>
                <value>
                    <fullName>DM_03 - Partially Secured</fullName>
                </value>
                <value>
                    <fullName>DM_29 - Rental Agreement</fullName>
                </value>
                <value>
                    <fullName>DM_02 - Secured</fullName>
                </value>
                <value>
                    <fullName>DM_01 - Unsecured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Metro2_Account_highest_bal_amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Highest Outstanding Principal Balance Amount</description>
        <label>DM Highest Bal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Metro2_Account_pmt_history_date__c</fullName>
        <description>Date when last Metro2 file was generated.</description>
        <label>DM Last Reported Metro2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Metro2_CCCD_Date__c</fullName>
        <description>Compliance Condition Code reported date</description>
        <label>DM CCCD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Metro2_CIIC_Date__c</fullName>
        <description>Reported date of Consumer Information Indicator Code</description>
        <label>DM CIIC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Metro2_Compliance_Condition_Code__c</fullName>
        <defaultValue>&quot;UNDEFINED&quot;</defaultValue>
        <description>Reported Metro2_Compliance_Condition_Code__c.</description>
        <label>DM Compliance Conditon Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Metro2_Consumer_Information_Code__c</fullName>
        <defaultValue>&quot;UNDEFINED&quot;</defaultValue>
        <description>Reported Consumer Information Code</description>
        <label>DM Consumer Information Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Metro2_First_Delinquency_Date__c</fullName>
        <inlineHelpText>This will be reported only if the Account Status Code is 61-65, 71, 78, 80, 82-84, 88-89 and 93-97.
This field gets updated only when the status of loan account changes from Active-Good Standing to Active-Bad Standing.</inlineHelpText>
        <label>DM Date of First Delinquency</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Metro2_Payment_History__c</fullName>
        <inlineHelpText>Report one month&apos;s payment record in each byte from the left to right in least recent to most recent order.</inlineHelpText>
        <label>DM Payment History</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Metro2_Payment_Rating__c</fullName>
        <inlineHelpText>The Payment Rating contains a code that properly identifies whether the account is current, past due, in collections or charged off within the activity period being reported.</inlineHelpText>
        <label>DM Payment Rating</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Metro2_Portfolio_Type__c</fullName>
        <inlineHelpText>Contains the one-character abbreviation for type of portfolio. Values available:
C = Line of credit
I = Installment
M = Mortgage
O = Open account
R = Revolving</inlineHelpText>
        <label>DM Portfolio Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Installment</fullName>
                    <default>true</default>
                    <label>DM_Installment</label>
                </value>
                <value>
                    <fullName>DM_Line of Credit</fullName>
                </value>
                <value>
                    <fullName>DM_Mortgage</fullName>
                </value>
                <value>
                    <fullName>DM_Open Account</fullName>
                </value>
                <value>
                    <fullName>DM_Revolving</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Metro2_Special_Comment__c</fullName>
        <label>DM Metro2 Special Comment</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Migration_Date__c</fullName>
        <label>DM Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Minimum_Advance_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>DM Minimum Advance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Minimum_Amount_Due_Type__c</fullName>
        <label>DM Minimum Amount Due Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Percent</fullName>
                </value>
                <value>
                    <fullName>DM_Fixed Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Minimum_Amount_Due__c</fullName>
        <inlineHelpText>Minimum % of bill amount to be paid by borrower to avoid late fee.</inlineHelpText>
        <label>DM Minimum Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Minimum_Draw_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Minimum advance amount which can be drawn by customer, applicable for line of credits.</inlineHelpText>
        <label>DM Minimum Draw Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Minimum_Due_Amount_On_Billing__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>DM Minimum Bill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Minimum_Interest_Rate__c</fullName>
        <description>Minimum interest rate for this contract</description>
        <inlineHelpText>Minimum interest rate for this contract</inlineHelpText>
        <label>DM Minimum Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Move_Across_Months__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will define whether the schedule&apos;s due date should get moved across the month if schedule is lying on holiday.</description>
        <inlineHelpText>It will define whether the schedule&apos;s due date should get moved across the month if schedule is lying on holiday.</inlineHelpText>
        <label>DM Move Across Months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_New_Field_3__c</fullName>
        <label>DM New Field 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Next_Accrual_Entry_Date__c</fullName>
        <label>DM Next Accrual Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Next_Capitalization_Date__c</fullName>
        <label>DM Next Capitalization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Next_Commission_Payment_Date__c</fullName>
        <description>Next Payment Date For Commission</description>
        <inlineHelpText>Next Payment Date For Commission.</inlineHelpText>
        <label>DM Next Commission Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Next_Crb_Pay_Profile_Date__c</fullName>
        <description>Next Payment Profile Generation date</description>
        <inlineHelpText>Next Payment Profile Generation date</inlineHelpText>
        <label>DM Next Credit Bureau Pay Profile Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Next_Deposit_Payment_Date__c</fullName>
        <description>This field stores the date for next deposit payment when Deposit Payment Offset Days has some positive value</description>
        <inlineHelpText>This field stores the date for next deposit payment when Deposit Payment Offset Days has some positive value</inlineHelpText>
        <label>DM Next Deposit Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Next_Due_Generation_Date__c</fullName>
        <description>Next Due Generation Date.</description>
        <inlineHelpText>This is determined by using the pre- bill days.</inlineHelpText>
        <label>DM Next Due Generation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Next_Installment_Date__c</fullName>
        <description>Date of the next installment</description>
        <inlineHelpText>Date of the Next Due</inlineHelpText>
        <label>DM Next Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Next_Interest_Posting_Date__c</fullName>
        <label>DM Next Interest Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Next_Repayment_Amount_As_Of_Today__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Tells the amount due as next repayment for this account as of today</description>
        <inlineHelpText>Tells the amount due as next repayment for this account as of today</inlineHelpText>
        <label>DM Next Repayment Amount As Of Today</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Number_of_Days_Overdue__c</fullName>
        <inlineHelpText>Number of days for which there has been an overdue on the loan account.</inlineHelpText>
        <label>DM Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Number_of_Installments__c</fullName>
        <description>Contractual Term Of the Loan Account</description>
        <inlineHelpText>Contractual term of the contract.</inlineHelpText>
        <label>DM Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_OT_ACH_Account_Number__c</fullName>
        <description>One time ACH account number</description>
        <inlineHelpText>One time ACH account number</inlineHelpText>
        <label>DM OT ACH Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_OT_ACH_Account_Type__c</fullName>
        <description>One time ACH Account type: Saving or checking</description>
        <label>DM OT ACH Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Checking</fullName>
                </value>
                <value>
                    <fullName>DM_Saving</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_OT_ACH_Bank_Name__c</fullName>
        <description>One time ACH Bank Name</description>
        <inlineHelpText>One time ACH Bank&apos;s name</inlineHelpText>
        <label>DM OT ACH Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_OT_ACH_Debit_Date__c</fullName>
        <label>DM OT ACH Debit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_OT_ACH_Drawer_Address1__c</fullName>
        <description>One time ACH Drawer Address Line 1</description>
        <inlineHelpText>One time ACH Drawer Address Line 1</inlineHelpText>
        <label>DM OT ACH Drawer Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_OT_ACH_Drawer_Address2__c</fullName>
        <description>One time ACH Drawer Address Line 2</description>
        <inlineHelpText>One time ACH Drawer Address Line 2</inlineHelpText>
        <label>DM OT ACH Drawer Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_OT_ACH_Drawer_City__c</fullName>
        <description>One time ACH Drawer City</description>
        <inlineHelpText>One time ACH Drawer city</inlineHelpText>
        <label>DM OT ACH Drawer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_OT_ACH_Drawer_Name__c</fullName>
        <description>One time ACH Drawer Name</description>
        <inlineHelpText>One time ACH drawer name</inlineHelpText>
        <label>DM OT ACH Drawer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_OT_ACH_Drawer_State__c</fullName>
        <description>One time ACH Drawer State</description>
        <inlineHelpText>One time ACH Drawer State</inlineHelpText>
        <label>DM OT ACH Drawer State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_OT_ACH_Drawer_Zip__c</fullName>
        <description>One time ACH Drawer Zip</description>
        <inlineHelpText>One time ACH Drawer Zip</inlineHelpText>
        <label>DM OT ACH Drawer Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_OT_ACH_Fee_Amount__c</fullName>
        <description>One time ACH fee amount</description>
        <inlineHelpText>One time ACH fee amount</inlineHelpText>
        <label>DM OT ACH Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_OT_ACH_Payment_Amount__c</fullName>
        <description>One time ACH payment amount</description>
        <inlineHelpText>One time ACH payment amount</inlineHelpText>
        <label>DM OT ACH Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_OT_ACH_Relationship_Type__c</fullName>
        <description>One time ACH relationship type</description>
        <label>DM OT ACH Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Primary</fullName>
                </value>
                <value>
                    <fullName>DM_Spouse</fullName>
                </value>
                <value>
                    <fullName>DM_Secondary</fullName>
                </value>
                <value>
                    <fullName>DM_Cosigner</fullName>
                </value>
                <value>
                    <fullName>DM_Cosigner Spouse</fullName>
                </value>
                <value>
                    <fullName>DM_Cosigner2</fullName>
                </value>
                <value>
                    <fullName>DM_Cosigner2 Spouse</fullName>
                </value>
                <value>
                    <fullName>DM_Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_OT_ACH_Routing_Number__c</fullName>
        <description>One time ACH Routing number</description>
        <inlineHelpText>One time ACH Routing number</inlineHelpText>
        <label>DM OT ACH Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_OT_Borrower_ACH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>One time borrower ACH</description>
        <inlineHelpText>One time borrower ACH</inlineHelpText>
        <label>DM OT Borrower ACH</label>
        <referenceTo>DM_Bank_Account__c</referenceTo>
        <relationshipName>Lending1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Oldest_Due_Date__c</fullName>
        <description>Oldest Due Date</description>
        <inlineHelpText>Oldest due date on the loan account.</inlineHelpText>
        <label>DM Oldest Unpaid  Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Origin_Source__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <description>Origin Source of the loan account.</description>
        <label>DM Origin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Originating_Bank_Fee_Share__c</fullName>
        <inlineHelpText>This is the %age of origination fees (pre-paid) that will be shared with the originating bank.</inlineHelpText>
        <label>DM Originating Bank Fee Share</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_OutstandingGreaterThanWriteoff__c</fullName>
        <formula>IF(DM_Principal_Remaining__c+DM_Fees_Remaining__c+DM_Interest_Accrued_Not_Due__c &gt; DM_Write_off_Tolerance_Amount__c , &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DM Outstanding&gt;Writeoff</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Overdue_Amount_As_Of_Today__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Tells the amount overdue for this account as of today</description>
        <inlineHelpText>Tells the amount overdue for this account as of today</inlineHelpText>
        <label>DM Overdue Amount As Of Today</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Overdue_Interest_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DM Overdue Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Overdue_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overdue interest from previous installments</description>
        <inlineHelpText>Overdue interest from previous installments</inlineHelpText>
        <label>DM Overdue Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Overdue_Penalty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overdue penalty from previous installments.</description>
        <inlineHelpText>Overdue penalty from previous installments.</inlineHelpText>
        <label>DM Overdue Penalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Overdue_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overdue principal from earlier installments.</description>
        <inlineHelpText>Overdue principal from earlier installments.</inlineHelpText>
        <label>DM Overdue Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Parent_Loan_Of_Investment__c</fullName>
        <description>This is the field where we capture the parent loan of the renewed investment loan</description>
        <label>DM Parent Loan Of Investment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>